@@ -1,1 +1,1 @@
-DIST magus-1.3.3.tar.bz2 7417528 RMD160 c2dc25fa45523f18dcce511c7697463a004aa083 SHA1 4d61a814d92f69f2d562e4809268e7c0fd205520 SHA256 14d75aba616149e52252fe0f1d0bae796936295aacfb82f1f620d1efd20a8e86
+DIST magus-1.3.3.tar.bz2 7417528 SHA256 14d75aba616149e52252fe0f1d0bae796936295aacfb82f1f620d1efd20a8e86
